@@ -4,20 +4,59 @@
 #include "getconfopt.h"
 #include "str.h"
 
-static void init(struct option *options)
-{
-  struct option *o;
-  for (o = options; o->type != 0; ++o)
-    o->isset = 0;
-}
-
-static int parse(int argc,char *argv[],struct option *options)
+static int count(int argc,char *argv[],struct option *options)
 {
   int i;
   int j;
   int ch;
   struct option *o;
 
+  /* First pass: find the end of the options, to find DIR. */
+  for (i = 1; i < argc && argv[i][0] == '-'; ++i) {
+    if (argv[i][1] == 0
+	|| (argv[i][1] == '-' && argv[i][2] == 0))
+      return i + 1;
+    for (j = 1; argv[i][j] != 0; ++j) {
+      ch = argv[i][j];
+      for (o = options; o->type != 0; ++o) {
+	if (ch == o->ch) {
+	  if (o->type->needsarg) {
+	    /* Look for -oVALUE */
+	    if (argv[i][j+1] != 0)
+	      ;
+	    /* Look for -o VALUE */
+	    else if (i + 1 < argc)
+	      ++i;
+	    else
+	      die_usage();
+	    j = str_len(argv[i]) - 1;
+	  }
+	  break;
+	}
+      }
+      if (o->type == 0)
+	die_usage();
+    }
+  }
+  return i;
+}
+
+static void init(struct option *options)
+{
+  struct option *o;
+  for (o = options; o->type != 0; ++o)
+    if (o->filename && o->type->fetch)
+      o->type->fetch(o);
+}
+
+static void parse(int argc,char *argv[],struct option *options)
+{
+  int i;
+  int j;
+  int ch;
+  struct option *o;
+
+  /* Second pass: actually parse the options. */
   for (i = 1; i < argc && argv[i][0] == '-'; ++i) {
     if (argv[i][1] == 0
 	|| (argv[i][1] == '-' && argv[i][2] == 0))
@@ -31,8 +70,7 @@ static int parse(int argc,char *argv[],struct option *options)
 	  else {
 	    /* Look for -oVALUE */
 	    if (argv[i][j+1] != 0) {
-	      ++j;
-	      if (!o->type->parse(o,argv[i]+j))
+	      if (!o->type->parse(o,argv[i]+j+1))
 		die_usage();
 	    }
 	    /* Look for -o VALUE */
@@ -45,7 +83,6 @@ static int parse(int argc,char *argv[],struct option *options)
 	      die_usage();
 	    j = str_len(argv[i]) - 1;
 	  }
-	  o->isset = 1;
 	  break;
 	}
       }
@@ -53,15 +90,6 @@ static int parse(int argc,char *argv[],struct option *options)
 	die_usage();
     }
   }
-  return i;
-}
-
-static void post(struct option *options)
-{
-  struct option *o;
-  for (o = options; o->type != 0; ++o)
-    if (o->filename && !o->isset && o->type->fetch)
-      o->type->fetch(o);
 }
 
 int getconfopt(int argc,char *argv[],struct option *options,
@@ -69,14 +97,14 @@ int getconfopt(int argc,char *argv[],struct option *options,
 {
   int optind;
 
-  init(options);
-  optind = parse(argc,argv,options);
+  optind = count(argc,argv,options);
   if (dir != 0)
     *dir = argv[optind];
   if (dochdir > 0
       || (dochdir < 0 && argv[optind] != 0)) {
     startup(argv[optind++]);
-    post(options);
   }
+  init(options);
+  parse(argc,argv,options);
   return optind;
 }
